# bot-core

./: .dockerignore  .env.example  .env.example.secure  .env.production.example  .env.vps  .gitignore  ASYNC_TASKS_IMPLEMENTATION_SUMMARY.md  BOT_LOGIC_CRITICAL_REVIEW_AND_OPTIMIZATION.md  CACH_HOAT_DONG_CUA_BOT.md  CHART_FEATURES.md  CLAUDE.md  CONTRIBUTING.md  CRITICAL_OPTIMIZATIONS_COMPLETE.md  CRYPTO_TRADING_DASHBOARD_DESIGN_SPEC.md  DEPLOYMENT_READY.md  DOCKER_OPTIMIZATION_GUIDE.md  FINAL_ACHIEVEMENT_REPORT.md  FLYCI_IMPLEMENTATION_SUMMARY.md  FRONTEND_AUDIT_SUMMARY_VI.md  FRONTEND_USER_DOCUMENTATION_SUMMARY.md  HYBRID_FILTER_IMPLEMENTATION.md  INTEGRATION_ARCHITECTURE.md  INTEGRATION_E2E_TEST_REPORT.md  INTEGRATION_SUMMARY.md  MONGODB_COMPASS_CONNECTION_GUIDE.md  MONGODB_SETUP_COMPLETE.md  MUTATION_TESTING_EXAMPLES.md  Makefile  OPTIMIZATION_SUMMARY.md  PHASE_2_COMPLETE_IMPLEMENTATION.md  PHASE_5_8_DEPLOYMENT_COMPLETE.md  PHASE_5_TRAILING_STOP_PLAN.md  PHASE_8_SECURITY_AUDIT_SUMMARY.md  PROGRESS_SUMMARY.md  PROJECT_10_10_UPGRADE_REPORT.md  PYTHON_88_SCORE_DETAILED_ANALYSIS.md  PYTHON_CRITICAL_FIXES_SUMMARY.md  PYTHON_REFACTOR_PHASE1_COMPLETION_REPORT.md  QUALITY_SCORE.md  QUICK_MONGODB_COMPASS_GUIDE.md  (+34 more)
rust-core-engine/: .cargo-mutants.toml  .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.production  ERROR_HANDLING_REFACTOR_REPORT.md  README.md  TEST_COVERAGE_REPORT.md  config.example.toml  config.toml  deny.toml  fly.toml  paper_trading_settings.toml  run_tests.sh  security_audit_advisories.json  security_audit_advisories.txt  security_audit_licenses.txt  tarpaulin-report.html
rust-core-engine/.claude/: active-plan
rust-core-engine/.github/workflows/: rust-ci.yml
rust-core-engine/benches/: position_benchmarks.rs  strategy_benchmarks.rs
rust-core-engine/config/: paper-trading-defaults.yml  real-trading-defaults.yml
rust-core-engine/docs/: CODING_STANDARDS.md  P2_MONITORING_METRICS_DESIGN.md  SAFETY_IMPROVEMENTS_REPORT.md
rust-core-engine/docs/testing/: AI_TEST_COVERAGE.md  AUTH_TEST_COVERAGE.md  README_AI_TESTS.md  RUST_TEST_FIXES_REPORT.md
rust-core-engine/examples/: test_futures_order.rs  test_oco_order.rs  test_spot_order.rs
rust-core-engine/migrations/: 001_initial_schema.js  001_initial_schema.sql  002_indexes.js  003_seed_data.js
rust-core-engine/mutants-indicators/mutants.out/: lock.json  mutants.json  outcomes.json
rust-core-engine/plans/20251203-phase2-real-trading-engine/: phase-01-core-structs.md  phase-02-order-execution.md  phase-03-position-tracking.md  phase-04-risk-integration.md  phase-05-reconciliation.md  plan.md
rust-core-engine/python_ai_service/: main.py  requirements.txt
rust-core-engine/src/: config.rs  error.rs  lib.rs  main.rs
rust-core-engine/src/ai/: client.rs  mod.rs  types.rs
rust-core-engine/src/api/: mod.rs  notifications.rs  paper_trading.rs  real_trading.rs  settings.rs
rust-core-engine/src/auth/: database.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  models.rs  rate_limiter.rs  security_handlers.rs
rust-core-engine/src/binance/: client.rs  mod.rs  types.rs  user_data_stream.rs  websocket.rs
rust-core-engine/src/market_data/: analyzer.rs  cache.rs  mod.rs  processor.rs
rust-core-engine/src/monitoring/: mod.rs
rust-core-engine/src/paper_trading/: engine.rs  mod.rs  portfolio.rs  settings.rs  strategy_optimizer.rs  trade.rs
rust-core-engine/src/real_trading/: config.rs  engine.rs  mod.rs  order.rs  position.rs  risk.rs
rust-core-engine/src/storage/: mod.rs
rust-core-engine/src/strategies/: bollinger_strategy.rs  hybrid_filter.rs  indicators.rs  macd_strategy.rs  ml_trend_predictor.rs  mod.rs  rsi_strategy.rs  stochastic_strategy.rs  strategy_engine.rs  tests.rs  types.rs  (+2 more)
rust-core-engine/tests/: README_AI_TESTS.md  test_ai.rs  test_all_5_strategies_live.rs  test_api_handlers.rs  test_auth.rs  test_auth_coverage.rs  test_binance_client.rs  test_binance_client_coverage.rs  test_config.rs  test_coverage_boost_3.rs  test_cross_service.rs  test_fn_storage_simple.rs  test_indicators_comprehensive.rs  test_market_data.rs  test_market_data_processor.rs  test_notifications_settings.rs  test_paper_trading.rs  test_paper_trading_coverage.rs  test_paper_trading_engine.rs  test_position_risk_comprehensive.rs  test_real_trading_integration.rs  test_risk_management.rs  test_security_handlers.rs  test_service_integration.rs  test_storage.rs  test_storage_coverage.rs  test_strategies.rs  test_trading.rs  test_trading_engine_coverage.rs  test_trailing_stops.rs  test_websocket.rs
(+1331 files in other folders)
