[package]
name = "binance-trading-bot"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
url = "2.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
dashmap = "5.4"
parking_lot = "0.12"
crossbeam-channel = "0.5"
config = "0.13"
warp = "0.3"
futures-util = "0.3"
futures = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rust_decimal = "1.26"
mongodb = { version = "2.8", optional = true }
bson = { version = "2.9", features = ["chrono-0_4"], optional = true }
structopt = "0.3"
toml = "0.8"
base64 = "0.21.7"
jsonwebtoken = "9.1"
bcrypt = "0.15"
validator = { version = "0.16", features = ["derive"] }
async-trait = "0.1"

[features]
default = ["database"]
database = ["mongodb", "bson"]

[dev-dependencies]
tokio-test = "0.4"
actix-web = { version = "4.0", features = ["macros"] }
futures-util = "0.3" 