[package]
name = "binance-trading-bot"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
url = "2.5.4"
uuid = { version = "1.19", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
log = "0.4"
anyhow = "1.0"
thiserror = "2.0"
dashmap = "6.1"
parking_lot = "0.12"
crossbeam-channel = "0.5"
warp = { version = "0.4", features = ["websocket", "server", "test"] }
config = "0.15"
futures-util = "0.3"
futures = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rust_decimal = { version = "1.39", features = ["serde"] }
mongodb = { version = "3.3", optional = true }
bson = { version = "2.15", features = ["chrono-0_4"], optional = true }
structopt = "0.3"
jsonwebtoken = { version = "10.2", default-features = false, features = ["use_pem", "rust_crypto"] }
base64 = "0.22.1"
ring = "0.17"
toml = "0.9"
bcrypt = "0.17"
validator = { version = "0.20", features = ["derive"] }
async-trait = "0.1"
totp-rs = { version = "5.6", features = ["qr", "gen_secret"] }
qrcode = "0.14"
image = "0.25"
slab = "0.4.11"
rand = "0.9"
sysinfo = "0.35"

[features]
default = ["database"]
database = ["mongodb", "bson"]

[dev-dependencies]
tokio-test = "0.4"
actix-web = { version = "4.12", features = ["macros"] }
futures-util = "0.3"
tempfile = "3.24"
anyhow = "1.0"
criterion = { version = "0.8", features = ["html_reports"] } 